tests/golden/release-4.12/openshift4-monitoring/openshift4-monitoring/20_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: alertmanager-allow-web
  name: alertmanager-allow-web
  namespace: openshift-monitoring
spec:
  ingress:
    - ports:
        - port: 9092
          protocol: TCP
        - port: 9093
          protocol: TCP
        - port: 9095
          protocol: TCP
        - port: 9097
          protocol: TCP
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-same-namespace
  name: allow-same-namespace
  namespace: openshift-monitoring
spec:
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-non-alertmanager
  name: allow-non-alertmanager
  namespace: openshift-monitoring
spec:
  ingress:
    - {}
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: NotIn
        values:
          - alertmanager
  policyTypes:
    - Ingress
